# drive

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake  Config.mk  Cpp.mk  LICENSE  Makefile  README.md  Setup.cmake  Setup.mk
include/drive/client/: BlobCache.h  BufferedInputStream.h  BufferedOutputStream.h  Cache.h  CrossIPC.h  Partition.h  Paths.h  PiperIPC.h  Util.h  Volume.h  VolumeManager.h
include/drive/common/: AsyncQueue.h  AsyncResult.h  Base64Encoder.h  BdKademlia.h  BdObject.h  BdPartition.h  BdPartitionFolder.h  BdSession.h  BdTypes.h  BufferedInputStream.h  BufferedOutputStream.h  Contract.h  Event.h  (+14 more)
libs/curl/: version.txt
src/: CMakeLists.txt  Cpp.mk  Main.cpp  Makefile  Makefile.bak  Partition.cpp  Partition.h  Util.cpp  Volume.h  VolumeRow.cpp  drive.sln
src/bdblob/: Argument.cpp  Argument.h  ArgumentParser.cpp  ArgumentParser.h  BlobApi.cpp  BlobApi.h  BlobConfig.cpp  BlobConfig.h  BlobError.cpp  BlobError.h  BlobMap.cpp  BlobMap.h  BlobMetadata.cpp  BlobMetadata.h  BlobProvider.h  Buffer.cpp  Buffer.h  BufferedInputStream.cpp  BufferedInputStream.h  BufferedOutputStream.cpp  BufferedOutputStream.h  CMakeLists.txt  Command.cpp  Command.h  File.cpp  File.h  FileBlob.cpp  FileBlob.h  FileBlobProvider.cpp  FileBlobProvider.h  Folder.cpp  Folder.h  Handle.h  IBlob.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  Main.cpp  RemoteBlob.cpp  (+3 more)
src/bdblob/commands/: CatCommand.cpp  CatCommand.h  GetCommand.cpp  GetCommand.h  ListCommand.cpp  ListCommand.h  MkdirCommand.cpp  MkdirCommand.h  MvCommand.cpp  MvCommand.h  PutCommand.cpp  PutCommand.h  RmCommand.cpp  RmCommand.h
src/bdcontract/: CMakeLists.txt  Main.cpp  Makefile  Options.cpp  Options.h
src/bdcontract-lib/: CMakeLists.txt  Contract.cpp  Contract.h  ContractRepository.cpp  ContractRepository.h  Makefile  bdcontract-lib.vcxproj  bdcontract-lib.vcxproj.filters  unistd.h
src/bddqs/: KademliaHandler.cpp  KademliaHandler.h  KademliaModule.h  Makefile
src/bdfs/: Action.cpp  Action.h  BitSet.cpp  CMakeLists.txt  Main.cpp  Makefile  Options.cpp  Options.h  Partition.cpp  Partition.h  Util.h  Volume.cpp  Volume.h  VolumeCell.cpp  bdfs.conf  bdfs.vcxproj  bdfs.vcxproj.filters
src/bdfs-lib/: AsyncQueue.h  AsyncResult.cpp  AsyncResult.h  AutoMutex.h  Base64Encoder.cpp  BdKademlia.cpp  BdKademlia.h  BdObject.cpp  BdObject.h  BdPartition.cpp  BdPartition.h  BdPartitionFolder.cpp  BdPartitionFolder.h  BdProtocol.h  BdSession.cpp  BdSession.h  BdSessionFactory.h  BdTypes.cpp  BdTypes.h  Buffer.cpp  Buffer.h  BufferedInputStream.cpp  BufferedOutputStream.cpp  CMakeLists.txt  Contract.cpp  Contract.h  ContractTerm.cpp  ContractTerm.h  Digest.cpp  Digest.h  EcdsaKey.cpp  EcdsaKey.h  Event.cpp  Event.h  EventLoop.h  HexEncoder.cpp  HexEncoder.h  HostInfo.cpp  HostInfo.h  HttpClient.cpp  (+23 more)
src/bdfsclient/: ActionHandler.cpp  ActionHandler.h  CMakeLists.txt  ClientManager-win.cpp  ClientManager.cpp  ClientManager.h  Main.cpp  Makefile  Partition.cpp  VolumeColumn.cpp  bdfsclient.service  bdfsclient.vcxproj  bdfsclient.vcxproj.filters  bdfsclientd  devio.cpp  devio.h  safeio.h  safeio_win32.cpp
src/bdfsclient-lib/: BdProtocol.h  BitSet.cpp  BitSet.h  BlobCache.cpp  BlobCache.h  BufferedInputStream.cpp  BufferedInputStream.h  BufferedOutputStream.cpp  BufferedOutputStream.h  CMakeLists.txt  Cache.cpp  Cache.h  CrossIPC.cpp  CrossIPC.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  Makefile  Offer.cpp  Offer.h  Partition.cpp  Partition.h  Paths.cpp  Paths.h  PiperIPC.h  Util-win.cpp  Util.cpp  Util.h  Volume.cpp  Volume.h  VolumeCell.cpp  VolumeColumn.cpp  VolumeManager.cpp  VolumeManager.h  VolumeRow.cpp  bdfsclient-lib.vcxproj  bdfsclient-lib.vcxproj.filters
src/bdfsclient/inc/: wmem.hpp
src/bdhost/: Base64Encoder.cpp  Base64Encoder.h  BitSet.cpp  BitSet.h  CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.h  ErrorCode.h  Global.cpp  Global.h  HttpContext.h  HttpHandler.h  HttpHandlerRegister.h  HttpModule.cpp  HttpModule.h  HttpServer.cpp  HttpServer.h  MGHttpContext.cpp  MGHttpContext.h  Main.cpp  Makefile  Makefile.bak  Options.cpp  Options.h  Partition.cpp  Partition.h  PartitionHandler.cpp  PartitionHandler.h  RelayManager.cpp  RelayManager.h  Util.cpp  Util.h  runhost.sh
src/bdkad/: CMakeLists.txt  Global.cpp  Global.h  KademliaHandler.cpp  KademliaHandler.h  KademliaModule.cpp  KademliaModule.h  Main.cpp  Makefile  Options.cpp  Options.h  PartitionHandler.cpp  PartitionHandler.h
src/config/: CMakeLists.txt  Makefile  bdblob.conf  bdblob.conf.test  bdfs.conf.test  bdhost.conf  bdhost.conf.test  bdkad.conf  default_contacts.json  default_contacts.json.test
src/contracts/: contract-0  contract-1  contract-2  contract-3  contract-4  contract-5  contract-6  contract-7
src/httpserver/: CMakeLists.txt  ErrorCode.h  HttpContext.h  HttpHandler.h  HttpHandlerRegister.h  HttpModule.cpp  HttpModule.h  HttpServer.cpp  HttpServer.h  MGHttpContext.cpp  MGHttpContext.h  Makefile
src/jsoncpp/: CMakeLists.txt  Makefile  Makefile.win  json_reader.cpp  json_value.cpp  json_writer.cpp  jsoncpp.vcxproj  jsoncpp.vcxproj.filters
src/jsoncpp/include/json/: forwards.h  reader.h  value.h
src/mongoose/: CMakeLists.txt  Makefile  mongoose.c  mongoose.h
src/service/: CMakeLists.txt  Makefile
src/service/bdfsclient/: CMakeLists.txt  bdfsclient.service  bdfsclientd
src/service/bdhost/: CMakeLists.txt  Makefile  bdhost.service  bdhostd
src/service/bdkad/: CMakeLists.txt  Makefile  bdkad.service  bdkadd
src/setup/: CMakeLists.txt  Makefile
src/setup/bdfs/: CMakeLists.txt  conffiles  control  postinst  prerm
src/setup/bdhost/: CMakeLists.txt  Makefile  conffiles  control  postinst  postrm  prerm
src/setup/bdkad/: CMakeLists.txt  Makefile  conffiles  control  postinst  postrm  prerm
src/tests/: cleanup.sh  create_contracts.sh  create_volume.sh  default_contacts.json  delete_volume.sh  format_volume.sh  mount_volume.sh  start_daemon.sh  start_hosts.sh  start_kad.sh  unmount_volume.sh
src/tests/storage_contract/: CMakeLists.txt  Main.cpp
src/tools/: Makefile
(+6 files in other folders)
